--- a/app/assets/stylesheets/user/show.css
+++ b/app/assets/stylesheets/user/show.css
@@ -1,5 +1,5 @@
-.item-color {
-  background-color: rgb(243, 222, 225);
+.item {
+  background-color: rgb(250, 249, 249);
 
   /* height: 100vh; */
   text-align: center;
@@ -13,7 +13,7 @@
   padding: 5px 140px;
 }
 
-.sub {
+.main {
   height: calc(100vh - 160px);
   
   
@@ -24,44 +24,45 @@
   
 }
 
-.button-real-dent {
+.btn-real-dent {
   /*周りの凹み*/
   display: inline-block;
   position: relative;
   text-decoration: none;
-  color: rgba(3, 169, 244, 0.54);
+  color: gray;
   width: 100px;
   height: 100px;
   border-radius: 50%;
   text-align: center;
   margin: 0 100px;
 }
-.button-real-dent i {
+.btn-real-dent i {
   /*ボタン自体*/
   position: absolute;
   content: '';
   width: 80px;
   height: 80px;
   line-height: 80px;
-  left: 10px;
-  top: 9px;
+  bottom: 100px;
+  right: 10px;
+  
   border-radius: 50%;
   font-size: 40px;
   background-image: linear-gradient(#e8e8e8 0%, #d6d6d6 100%);
   text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.66);
   box-shadow: inset 0 2px 0 rgba(255,255,255,0.5), 0 2px 2px rgba(0, 0, 0, 0.19);
-  border-bottom: solid 2px #b5b5b5;
+  
 }
   
-.button-real-dent .fa:active {
-  box-shadow: inset 0 1px 0 rgba(255,255,255,0.5), 0 2px 2px rgba(0, 0, 0, 0.19);
-  border-bottom: solid 2px #d8d8d8;
+
+
+.main-image {
+  margin-top: 80px;
+  box-shadow: 0 0 20px gray;
+  border-radius: 500px;
+  
 }
 
-.sub-image {
-  height: 570px;
-  width: 600px;
-  margin: 30px 0;
-  box-shadow: 0 0 20px gray;
-  border-radius: 30px;
+.name-age {
+  margin-top: 13px;
 }
