--- a/app/assets/stylesheets/homes/index.scss
+++ b/app/assets/stylesheets/homes/index.scss
@@ -13,10 +13,11 @@
   padding: 5px 140px;
 }
 
+
+
 .sub {
   height: calc(100vh - 160px);
-  
-  
+  position: relative;
 }
 
 .footer {
@@ -29,39 +30,53 @@
   display: inline-block;
   position: relative;
   text-decoration: none;
-  color: rgba(3, 169, 244, 0.54);
-  width: 100px;
-  height: 100px;
+  outline: none;
+  width: 80px;
+  height: 80px;
   border-radius: 50%;
   text-align: center;
   margin: 0 100px;
+  outline: none;
+  border: none;
 }
+
 .button-real-dent i {
   /*ボタン自体*/
   position: absolute;
-  content: '';
   width: 80px;
   height: 80px;
   line-height: 80px;
-  left: 10px;
-  top: 9px;
+  right: 1px;
+  left: 1px;
+  top: 1px;
   border-radius: 50%;
-  font-size: 40px;
-  background-image: linear-gradient(#e8e8e8 0%, #d6d6d6 100%);
+  font-size: 50px;
   text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.66);
   box-shadow: inset 0 2px 0 rgba(255,255,255,0.5), 0 2px 2px rgba(0, 0, 0, 0.19);
   border-bottom: solid 2px #b5b5b5;
+  color: rgba(3, 169, 244, 0.54);
 }
+
+// .button-real-dent .fa-heart:active {
+//   box-shadow: inset 0 1px 0 rgba(255,255,255,0.5), 0 2px 2px rgba(0, 0, 0, 0.19);
+//   border-bottom: solid 2px #d8d8d8;
+// }
   
-.button-real-dent .fa:active {
-  box-shadow: inset 0 1px 0 rgba(255,255,255,0.5), 0 2px 2px rgba(0, 0, 0, 0.19);
-  border-bottom: solid 2px #d8d8d8;
+
+.sub-main {
+  position: relative;
+  display: block;
+  width: 335px;
+  // height: 50px;
+  margin: 0 auto;
 }
 
 .sub-image {
-  height: 570px;
-  width: 600px;
-  margin: 30px 0;
+  display: block;
+  height: 500px;
   box-shadow: 0 0 20px gray;
   border-radius: 30px;
+  position: absolute;
+  top: 30px;
 }
+
