--- a/app/assets/stylesheets/user/show.css
+++ b/app/assets/stylesheets/user/show.css
@@ -13,6 +13,10 @@
   padding: 5px 140px;
 }
 
+.current-icon {
+  color: red;
+}
+
 .main {
   height: calc(100vh - 160px);
   
@@ -21,7 +25,6 @@
 
 .footer {
   height: 100px;
-  
 }
 
 .btn-real-dent {
@@ -51,7 +54,7 @@
   background-image: linear-gradient(#e8e8e8 0%, #d6d6d6 100%);
   text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.66);
   box-shadow: inset 0 2px 0 rgba(255,255,255,0.5), 0 2px 2px rgba(0, 0, 0, 0.19);
-  
+
 }
   
 
@@ -60,7 +63,8 @@
   margin-top: 80px;
   box-shadow: 0 0 20px gray;
   border-radius: 500px;
-  
+  width: 200px;
+  height: 250px;
 }
 
 .name-age {
