--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -67,6 +67,13 @@
               </div>
 
               <div class="form-group">
+              <div class="form-text-wrap">
+              <label class="form-text">画像</label>
+              </div>
+                <%= f.file_field :image, class: "input-default" %>
+                </div>
+
+              <div class="form-group">
                 <div class="form-text-wrap">
                   <label class="form-text">自己紹介</label>
               </div>
@@ -108,7 +115,7 @@
               <%= f.text_area :resident, class: "input-default" %>
               </div>
       
-        <%= f.submit "登録", class: "form-button" %>
+        <%= f.submit "登録", class: "submit-button" %>
         <% end %>
     
   </body>
