--- a/app/assets/stylesheets/homes/index.scss
+++ b/app/assets/stylesheets/homes/index.scss
@@ -1,66 +1,55 @@
 .item-color {
   background-color: rgb(243, 222, 225);
-
-  /* height: 100vh; */
   text-align: center;
+  
 }
 
 
 .header {
   display: flex;
-  justify-content: space-around;
-  height: 60px;
-  padding: 5px 140px;
+  // justify-content: space-around;
+  // height: 60px;
+  // padding: 5px 140px;
+  
 }
 
 
 
-.sub {
+.footer {
   height: calc(100vh - 160px);
   position: relative;
 }
 
-.footer {
-  height: 100px;
+.actions {
+  height: 100%;
+}
+
+#tinderslide {
+  height: calc(100vh - 140px);
   
 }
 
+
+
+
 .button-real-dent {
-  /*周りの凹み*/
+  /*ボタン自体*/
   display: inline-block;
   position: relative;
-  text-decoration: none;
-  outline: none;
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  text-align: center;
-  margin: 0 100px;
-  outline: none;
-  border: none;
-}
-
-.button-real-dent i {
-  /*ボタン自体*/
-  position: absolute;
   width: 80px;
   height: 80px;
   line-height: 80px;
-  right: 1px;
-  left: 1px;
-  top: 1px;
+  text-align: center;
   border-radius: 50%;
-  font-size: 50px;
+  font-size: 40px;
   text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.66);
   box-shadow: inset 0 2px 0 rgba(255,255,255,0.5), 0 2px 2px rgba(0, 0, 0, 0.19);
   border-bottom: solid 2px #b5b5b5;
   color: rgba(3, 169, 244, 0.54);
+  margin: 0 80px;
 }
 
-// .button-real-dent .fa-heart:active {
-//   box-shadow: inset 0 1px 0 rgba(255,255,255,0.5), 0 2px 2px rgba(0, 0, 0, 0.19);
-//   border-bottom: solid 2px #d8d8d8;
-// }
+
   
 
 .sub-main {
@@ -80,3 +69,16 @@
   top: 30px;
 }
 
+.noUser {
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%);
+  font-size: 20px;
+  width: 100%;
+  text-align: center;
+  &.is-active {
+    display: block;
+  }
+}
