--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,25 @@
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css">
     <%= javascript_pack_tag 'application' %>
+    <%# <link rel="stylesheet" type="text/css" href="css/jTinder.css"> %>
+    
+    
+    
 
   </head>
-
+  
   <body>
+  <%# <!-- jQuery lib -->
+<script type="text/javascript" src="js/jquery.min.js"></script>
+
+<!-- transform2d lib -->
+<script type="text/javascript" src="js/jquery.transform2d.js"></script>
+
+<!-- jTinder lib -->
+<script type="text/javascript" src="js/jquery.jTinder.js"></script>
+
+<!-- jTinder initialization script -->
+<script>$("#tinderslide").jTinder();</script> %>
     <%= yield %>
   </body>
 </html>
