--- a/app/views/talks/show.html.erb
+++ b/app/views/talks/show.html.erb
@@ -1,5 +1,5 @@
 <div class="back">
-      <a href="#" class="back-button"><i class="fas fa-chevron-left"></i></a>
+<%= link_to user_talks_path(current_user.id) do %><i class="fas fa-chevron-left back-button" ></i><% end %>
     </div>
     <div class="talk">
       <div class="talk_left">
