--- a/app/assets/stylesheets/homes/index.scss
+++ b/app/assets/stylesheets/homes/index.scss
@@ -15,7 +15,7 @@
 
 
 
-.footer {
+.actions {
   height: calc(100vh - 160px);
   position: relative;
 }
@@ -47,6 +47,7 @@
   border-bottom: solid 2px #b5b5b5;
   color: rgba(3, 169, 244, 0.54);
   margin: 0 80px;
+  background-color: rgba(240, 238, 238, 0.66);
 }
 
 
@@ -58,6 +59,11 @@
   width: 335px;
   // height: 50px;
   margin: 0 auto;
+  span {
+    position: absolute;
+    color: rgba(0, 0, 0, 0)
+    // visibility: hidden;
+  }
 }
 
 .sub-image {
@@ -82,3 +88,33 @@
     display: block;
   }
 }
+#tinderslide .like,
+#tinderslide .dislike {
+    background: image-url("liked.png") no-repeat scroll 0 0;
+    opacity: 0;
+    height: 80px;
+    position: absolute;
+    width: 170px;
+    left: 200px;
+    top: 40px;
+    z-index: 1;
+    overflow: hidden;
+    -webkit-transform: translate3d(0%,0,0) scale3d(1,1,1);
+    -moz-transform: translate3d(0%,0,0) scale3d(1,1,1);
+    -ms-transform: translate3d(0%,0,0) scale3d(1,1,1);
+    -o-transform: translate3d(0%,0,0) scale3d(1,1,1);
+    transform: translate3d(0%,0,0) scale3d(1,1,1);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+#tinderslide .dislike {
+    right: 200px;
+    left: auto;
+    background: image-url("nope.png") no-repeat scroll 0 0;
+}
+
+// .user-id-hidden {
+//   position: absolute;
+//   visibility: hidden;
+// }
