--- a/app/assets/stylesheets/talks/show.scss
+++ b/app/assets/stylesheets/talks/show.scss
@@ -104,3 +104,19 @@ padding-top: 10px;
 .back-button {
   font-size: 30px;
 }
+
+.talkPartner {
+  &_name {
+    font-size: 13px;
+    text-align: center;
+  }
+  &_img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    overflow: hidden;
+    display: block;
+    margin: auto;
+      margin-top: -45px;
+    }
+  }
