--- a/app/views/talks/show.html.erb
+++ b/app/views/talks/show.html.erb
@@ -1,16 +1,18 @@
 <div class="back">
 <%= link_to user_talks_path(current_user.id) do %><i class="fas fa-chevron-left back-button" ></i><% end %>
+     <img src=<%= @talk_room_user.image %> class="talkPartner_img">
+      <div class="talkPartner_name"><%= @talk_room_user.nickname %></div>
     </div>
     <div class="talk">
       <div class="talk_left">
-        <p>こちらは左側に表示される吹き出しのメッセージです。<br>二行目はこんな感じ。</p>
+         <%= render @talk_messages %>
       </div>
 
       <div class="time-left">
         <p>15:55</p>
       </div>
       <div class="talk_right">
-        <p>こちらは右側に表示される吹き出しのメッセージです。<br>二行目はこんな感じ。<br>三行目はこんな感じ。</p>
+        <%= render @talk_messages %>
       </div>
 
       <div class="time-right">
