--- a/app/assets/stylesheets/talks/show.scss
+++ b/app/assets/stylesheets/talks/show.scss
@@ -37,7 +37,8 @@
 
  .talk_right {
 	float:right; /* 右のふきだしは全体的に右寄せ */
-	margin-top:1em;
+  margin-top:1em;
+  color: rgb(248, 249, 250);
 }
 
  .talk_right p { /* 右ふきだしの本体 */
