--- a/app/views/talks/show.html.erb
+++ b/app/views/talks/show.html.erb
@@ -4,7 +4,19 @@
       <div class="talkPartner_name"><%= @talk_room_user.nickname %></div>
     </div>
     <div class="talk">
-      <%= render @talk_messages %>
+     <div class="talk_left">
+      </div>
+
+    <div class="time-left">
+        <p>15:55</p> 
+      </div> 
+      <div class="talk_right">
+      <span><%= current_user.id %></span>
+      </div>
+
+      <div class="time-right">
+        <p>15:56</p>
+      </div>
     </div>
       <div class="submit">
         <textarea class="submit-message" placeholder="メッセージを入力"></textarea>
