--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,6 +14,7 @@
   </div>
   <div class="footer">
     <a href="#" class="btn-real-dent"><i class="fas fa-cog"></i>設定</a> <!-- 各種設定 -->
-      <a href="#" class="btn-real-dent"><i class="fas fa-pencil-alt"></i>編集</a> <!-- ユーザー編集 -->
+    <%= link_to edit_user_registration_path, class: "btn-real-dent" do %><i class="fas fa-pencil-alt"></i>編集<% end %> <!-- ユーザー編集 -->
+      <%# <a href="#" class="btn-real-dent"><i class="fas fa-pencil-alt"></i>編集</a>  %>
   </div>
   </div>
