--- a/app/views/talks/show.html.erb
+++ b/app/views/talks/show.html.erb
@@ -3,22 +3,17 @@
      <img src=<%= @talk_room_user.image %> class="talkPartner_img">
       <div class="talkPartner_name"><%= @talk_room_user.nickname %></div>
     </div>
-    <div class="talk">
-     <div class="talk_left">
-      </div>
 
-    <div class="time-left">
-        <p>15:55</p> 
-      </div> 
-      <div class="talk_right">
-      <span><%= current_user.id %></span>
-      </div>
+<div class="talk" data-talk_room_id="<%= params[:id] %>" data-user_id="<%= current_user.id %>">
+     <%= render @messages %>
+     </div>
 
-      <div class="time-right">
-        <p>15:56</p>
-      </div>
-    </div>
-      <div class="submit">
-        <textarea class="submit-message" placeholder="メッセージを入力"></textarea>
+
+    <form class= "submit">
+    <textarea id="submit-message" placeholder="メッセージを入力" data-behavior="room_speaker"></textarea>
         <input type="submit" class="send" value="送信" data-behavior="room_speaker">
-      </div>
+  
+        <input id="current_user_id" type="hidden" value= "<%=current_user.id%>">
+        <input id="partner_id" type="hidden" value= "<%=@talk_room.id%>">
+    </form>
+    
